# bbc

./: '  .gitignore  Makefile  README.md  TODO.txt  bbc.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-3.5/7.10.2/doc/bbc-0.1.0.0/: LICENSE
.stack-work/install/x86_64-linux/lts-3.5/7.10.2/flag-cache/: bbc-0.1.0.0
c-lib/: byte-blocks.h
examples/kafka/: Makefile  kafka  kafka-types.bb  kafka-types.bb.h  kafka-types.bb.old  kafka.c
src/: '  Ast.hs  CPretty.hs  Exceptions.hs  GenC.hs  GenC2.hs  GenImperative.hs  Main.hs  Parse.hs  ParseNew.hs  SyntaxImp.hs  TypeCheck.hs
test/: .gitignore  Makefile  TODO.txt  aligned-bitfields  aligned-bitfields.bb.h  aligned-bitfields.c  array  array-and-nested  array-and-nested.bb  array-and-nested.bb.h  array-and-nested.c  array.bb.h  array.c  bad-read  compile-bad-fixed-array.sh  compile-unknown-block.sh  fixed-array  fixed-array-nested.bb  fixed-array-type-error  fixed-array.c  flat-numtypes.bb  large-array  named-block  named-block.bb.h  named-block.c  sumty  sumty-and-nested  sumty-and-nested.bb  sumty-and-nested.bb.h  sumty-and-nested.c  sumty.bb  sumty.bb.h  sumty.c  test.sh  unknown-block.bb
test/outfiles/: compile-unknown-block.sh.out
test2/: Makefile  aligned-bitfields.bb  aligned-bitfields.bb.h.manual  aligned-bitfields.c  array.bb  array.c  bad-read.bb  bad-read.c  compile-bad-fixed-array.sh  compile-unknown-block.sh  fixed-array-nested.c  fixed-array-sumty.bb  fixed-array-sumty.c  fixed-array-type-error.bb  fixed-array.bb  large-array.c  named-block.bb  named-block.c  sumty.bb  sumty.c
test2/outfiles/: compile-bad-fixed-array.sh.out
