name:                bbc
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/ethanpailes/bbc#readme
license:             BSD3
license-file:        LICENSE
author:              Ethan Pailes
maintainer:          Ethan.Pailes@tufts.edu
copyright:           Ethan Pailes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable bbc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
        base >= 4.7 && < 5
      , QuickCheck
      , parsec
