name:                bbc
version:             0.1.0.0
synopsis:            Data description langauge
description:         Please see README.md
homepage:            http://github.com/ethanpailes/bbc#readme
license:             BSD3
license-file:        LICENSE
author:              Ethan Pailes
maintainer:          Ethan.Pailes@tufts.edu
copyright:           Ethan Pailes
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable bbc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:
        OverloadedStrings
        FlexibleContexts
        TemplateHaskell
  ghc-options:
        -Wall
  other-modules:
        Ast
      , Exceptions
      , GenC
      , Parse
      , TypeCheck
  build-depends:
        base >= 4.7 && < 5
      , QuickCheck
      , parsec
      , MissingH
      , random == 1.1
      , containers == 0.5.6.2
      , megaparsec == 4.2.0
      , text == 1.2.1.3
