name:                bbc
version:             0.1.0.0
synopsis:            Data description langauge
description:         Please see README.md
homepage:            http://github.com/ethanpailes/bbc#readme
license:             BSD3
license-file:        LICENSE
author:              Ethan Pailes
maintainer:          Ethan.Pailes@tufts.edu
copyright:           Ethan Pailes
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable bbc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:
        OverloadedStrings
        FlexibleContexts
        TemplateHaskell
  ghc-options:
        -Wall
        -fno-warn-name-shadowing
        -j1
  other-modules:
        Ast
      , Exceptions
      , GenC
      , Parse
      , TypeCheck
      , GenC2
      , SyntaxImp
      , CPretty
  build-depends:
        base >= 4.7 && < 5
      , QuickCheck
      , parsec
      , semigroups
      , MissingH
      , random >= 1.1
      , containers >= 0.5.6.2
      , megaparsec >= 4.2.0
      , text >= 1.2.1.3
      , mtl >= 2.2.1
      , language-c >= 0.4.7
      , bytestring >= 0.10.6.0
      , pretty >= 1.1.2.0
